=================================
Changes for Crate Admin Interface
=================================

Unreleased
==========

 - Corrected the sql query in the tutorial to fix the error that occured 
   when tweets table was already created.

2016/10/27 0.21.0
=================

 - Added a button to clear the search field in the table list view.

 - Added Spanish translation.

2016/10/21 0.20.4
=================

 - Fix: removed chinese language from i18n configuration.

 - Fix: added english as a fallback language for translation files.

2016/10/18 0.20.3
=================

 - Fixed broken execute button in the console view.

 - Fix : Reduced the amount of log output to browser console when issuing SQL statements.

2016/10/12 0.20.2
=================

 - Fixed hyperlink on logo in navigation bar which incorreclty pointed to
   the Crate HTTP root.

2016/10/12 0.20.1
=================

 - Fixed the chart error that occured when navigating between the overview and other pages.

 - Fixed the logo URL which was not redirecting correctly.

 - Fixed an issue that caused the query history in the console view to be inconsistent.

2016/09/23 0.20.0
=================

 - Added a new console option to allow users to display the error trace when an error occurs.

 - Added translation for tutorial plugin. This enables support for i18n for any admin ui plugin.

2016/09/23 0.19.1
=================

 - Fix: number of underreplicated shards cannot be negative.

 - Fix: fixed menu order.

2016/08/22 0.19.0
=================

 - Display failing node checks on overview page and allow to dismiss them.

 - Added German translation.
   This change also enables the possibility for further i18n.

2016/06/03 0.18.1
=================

 - Resolve path to ``/_sql`` endpoint correctly when Crate is served at a
   different location than ``/``

2016/05/25 0.18.0
=================

 - Cluster check include now clickable links

 - Load additional links in menu dynamically from news feed
