@@ -13,18 +13,18 @@ angular.module('shardinfo', [])
           'where table_schema not in (\'information_schema\', \'sys\', \'pg_catalog\')';
 
       // shard info statement
-      var shardStmt = "SELECT table_name, table_schema, format('%s.%s', table_schema, table_name) AS fqn, _node['id'] AS node_id, state, routing_state, relocating_node, count(*), \"primary\", sum(num_docs), avg(num_docs), sum(size) " +
+      var shardStmt = "SELECT table_name, schema_name, format('%s.%s', schema_name, table_name) AS fqn, _node['id'] AS node_id, state, routing_state, relocating_node, count(*), \"primary\", sum(num_docs), avg(num_docs), sum(size) " +
           "FROM sys.shards " +
-          "GROUP BY table_name, table_schema, fqn, node_id, state, routing_state, relocating_node, \"primary\"";
+          "GROUP BY table_name, schema_name, fqn, node_id, state, routing_state, relocating_node, \"primary\"";
 
       // table partitions statement
-      var partStmt = 'select table_name, table_schema, format(\'%s.%s\', table_schema, table_name) as fqn, sum(number_of_shards) as num_shards ' +
+      var partStmt = 'select table_name, schema_name, format(\'%s.%s\', schema_name, table_name) as fqn, sum(number_of_shards) as num_shards ' +
           'from information_schema.table_partitions ' +
-          'group by table_name, table_schema, fqn';
+          'group by table_name, schema_name, fqn';
 
-      var recoveryStmt = "SELECT table_name, table_schema, recovery['stage'] AS recovery_stage, avg(recovery['size']['percent']), count(*) as count " +
+      var recoveryStmt = "SELECT table_name, schema_name, recovery['stage'] AS recovery_stage, avg(recovery['size']['percent']), count(*) as count " +
           "FROM sys.shards " +
-          "GROUP BY table_name, table_schema, recovery_stage";
+          "GROUP BY table_name, schema_name, recovery_stage";
 
       shardInfo.executeTableStmt = function () {
         var deferred = $q.defer(),
@@ -50,7 +50,7 @@ angular.module('shardinfo', [])
         SQLQuery.execute(shardStmt)
           .success(function (shardQuery) {
             var result = queryResultToObjects(shardQuery,
-                ['table_name', 'table_schema', 'fqn', 'node_id', 'state', 'routing_state', 'relocating_node', 'count', 'primary', 'sum_docs', 'avg_docs', 'size']);
+                ['table_name', 'schema_name', 'fqn', 'node_id', 'state', 'routing_state', 'relocating_node', 'count', 'primary', 'sum_docs', 'avg_docs', 'size']);
             deferred.resolve(result);
           })
           .error(function () {
@@ -67,7 +67,7 @@ angular.module('shardinfo', [])
         SQLQuery.execute(partStmt)
           .success(function (partQuery) {
             var result = queryResultToObjects(partQuery,
-                ['table_name', 'table_schema', 'fqn', 'num_shards']);
+                ['table_name', 'schema_name', 'fqn', 'num_shards']);
             deferred.resolve(result);
           })
           .error(function () {
@@ -84,7 +84,7 @@ angular.module('shardinfo', [])
         SQLQuery.execute(recoveryStmt)
           .success(function (recoveryQuery) {
             var result = queryResultToObjects(recoveryQuery,
-                ['table_name', 'table_schema', 'recovery_stage', 'recovery_percent', 'count']);
+                ['table_name', 'schema_name', 'recovery_stage', 'recovery_percent', 'count']);
             deferred.resolve(result);
           })
           .error(function () {
